# edlint

./: .gitignore  .typos.toml  Cargo.toml  README.md  config_schema.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
