[workspace]
resolver = "3"
members = ["packages/config", "packages/core"]
exclude = ["tasks/lint_rules", "tasks/e2e"]

[workspace.package]
authors = ["Evgeny <evgeny.paromov@gmail.com>", "Oxc contributors"]
categories = ["compilers", "development-tools", "web-programming"]
homepage = "https://ed.evocomm.space"
keywords = ["JavaScript", "TypeScript", "achitecture", "lint"]
license = "MIT"
repository = "https://github.com/evo-community/edlint"
description = "Architecture linter written in Rust"

edition = "2024"
# MSRV Policy N-2 (12 weeks) starting from v1.87.0
# Balance between the core contributors enjoying the latest version of rustc, while waiting for dependents to catch up.
rust-version = "1.87.0"


[workspace.dependencies]
# publish = true


# publish = false

# Relaxed version so the user can decide which version to use.
napi = "3.0.0-alpha"
napi-build = "2"
napi-derive = "3.0.0-alpha"

# Relaxed version so the user can decide which version to use.
indexmap = { version = "2", features = ["serde"] }
proc-macro2 = "1"
quote = "1"
rustc-hash = "2"
serde = "1"
serde_json = "1"
serde_yaml = "0.9.34+deprecated"
syn = { version = "2", default-features = false }
unicode-id-start = "1"


#
allocator-api2 = "=0.2.21"
base64 = "0.22.1"
bitflags = "2.9.0"
bpaf = "0.9.19"
# `bumpalo` must be pinned to exactly this version.
# `Allocator::from_raw_parts` (used in raw transfer) depends on internal implementation details
# of `bumpalo` which may change in a future version.
# This is a temporary situation - we'll replace `bumpalo` with our own allocator.
bumpalo = "=3.17.0"
compact_str = "0.9.0"
console = "0.15.11"
constcat = "0.6.0"
convert_case = "0.8.0"
cow-utils = "0.1.3"
criterion2 = { version = "3.0.0", default-features = false }
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger = { version = "0.11.8", default-features = false }
fast-glob = "0.4.5"
fixedbitset = "0.5.7"
flate2 = "1.1.1"
futures = "0.3.31"
globset = "0.4.16"
handlebars = "6.3.2"
hashbrown = { version = "0.15.3", default-features = false }
humansize = "2.1.3"
ignore = "0.4.23"
insta = "1.43.1"
itertools = "0.14.0"
itoa = "1.0.15"
javascript-globals = "1.1.0"
json-strip-comments = "1.0.4"
language-tags = "0.3.2"
lazy-regex = "3.4.1"
lazy_static = "1.5.0"
log = "0.4.27"
markdown = "1.0.0"
memchr = "2.7.4"

mimalloc-safe = "0.1.52"
nonmax = "0.5.5"
num-bigint = "0.4.6"
num-traits = "0.2.19"
papaya = "0.2.1"
petgraph = { version = "0.8.1", default-features = false }
phf = "0.11.3"
phf_codegen = "0.11.3"
pico-args = "0.5.0"
prettyplease = "0.2.32"
project-root = "0.2.2"
rayon = "1.10.0"
ropey = "1.6.1"
rust-lapper = "1.1.0"
ryu-js = "1.0.2"
saphyr = "0.0.4"
schemars = "0.8.22"
self_cell = "1.2.0"
seq-macro = "0.3.6"
sha1 = "0.10.6"
simdutf8 = { version = "0.1.5", features = ["aarch64_neon"] }
similar = "2.7.0"
similar-asserts = "1.7.0"
smallvec = "1.15.0"
tempfile = "3.20.0"
tokio = { version = "1.45.0", default-features = false }
tower-lsp-server = "0.21.1"
tracing-subscriber = "0.3.19"
ureq = { version = "3.0.11", default-features = false }
walkdir = "2.5.0"
